add citation for hnerv

--- a/HNeRV/index.html
+++ b/HNeRV/index.html
@@ -204,20 +204,20 @@ p {
         </div>
 
             
-        <!-- <div class="row">
+        <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
                     Citation
                 </h3>
        <div class="form-group col-md-10 col-md-offset-1">
     <textarea id="bibtex" class="form-control" readonly>
-        @inproceedings{hao2022cnerv,
-            author = {Chen, Hao and Matthew, Gwilliam and Lim, Ser-Nam and Abhinav Shrivastava},
-            title = {HNeRV: Content-adaptive Neural Representation for Visual Data},
-            booktitle = {BMVC},
-            year={2022}
-        }
-    </textarea> -->
+        @InProceedings{chen2023hnerv,
+            title={{HN}e{RV}: Neural Representations for Videos}, 
+            author={Hao Chen and Matthew Gwilliam and Ser-Nam Lim and Abhinav Shrivastava},
+            year={2023},
+            booktitle={CVPR},
+      }
+    </textarea>
                  </div> 
             </div>
         </div>
