added HNeRV and D-NeRV

--- a/HNeRV/index.html
+++ b/HNeRV/index.html
@@ -53,7 +53,8 @@ p {
             <h2 class="col-md-12 text-center">
                 HNeRV: A Hybrid Neural Representation for Videos</br> 
                 <small>
-                     CVPR 2023  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+                    <a href="https://cvpr2023.thecvf.com"> CVPR 2023 </a>  &nbsp &nbsp &nbsp &nbsp &nbsp
+                    <a href="https://arxiv.org/abs/2304.02633"> Paper</a> &nbsp &nbsp &nbsp &nbsp &nbsp
                     <a href="https://github.com/haochen-rye/HNeRV"> Code</a>
                 </small>                    
             </h2>
@@ -189,13 +190,15 @@ p {
                 </div>
 
                 <h3>
-                    7) Video inpainting
+                    7) Video restoration
                 </h3>
                 <div style="margin-bottom: 25px">
-                <img src="img/inpaint_swan_short.jpg" alt="" width="100%" >
-                <img src="img/cows-inpaint.jpg" alt="" width="100%" >
+                    <img src="https://i.imgur.com/3q0hhRt.gif" alt="" width="100%" >
+                    <img src="https://i.imgur.com/PUu71Lj.gif" alt="" width="100%" >
+                    <img src="https://i.imgur.com/ZgNhg2l.gif" alt="" width="100%" >
+                    <img src="https://i.imgur.com/wZJAZze.gif" alt="" width="100%" >
                 <p class="text-justify" style="font-size:20px;">
-                    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; HNeRV input &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; HNeRV output
+                    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; HNeRV input &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; HNeRV output
                 </p>                
                 </div>
 
@@ -203,7 +206,6 @@ p {
             </div>
         </div>
 
-            
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
