--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@ p {
                     <br>
                     <!-- <span style="color:red;"> -->
                     <strong>
-                        I am expected to graduate and will be on the job market in 2023, please reach out to me if you have any research openings, and thanks in advance. <br><br>
                     </strong> 
                     <!-- </span> <br> -->
                     I am currently a 5th &nbsp;Ph.D. student in the department of Computer Science at University of Maryland, College Park, 
@@ -156,13 +155,32 @@ p {
                 <heading style="color:blue;"><strong>HNeRV: A Hybrid Neural Representation for Videos </strong> </heading><br>
             <strong>CVPR 2023
                 <a href="https://haochen-rye.github.io/HNeRV">[project page]</a>
-                    <a href="https://github.com/haochen-rye/HNeRV.git">[code]</a>
+                <a href="https://arxiv.org/abs/2304.02633">[paper] 
+                <a href="https://github.com/haochen-rye/HNeRV.git">[code]</a>
             </strong> <br>
                 <strong>Hao Chen</strong>, Matt Gwilliam, Ser-Nam Lim, Abhinav Shrivastava         <br style="line-height:125%"> </br>    
             We propose a hybrid video neural representation and a evenly distributed neural network to improve modeling capacity and introduce internal generalization.   
                 </p>
             </span>
         </div>
+
+        <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
+            <span style="float:left;width: 40%;">
+                <img src="https://i.imgur.com/dY0YKLe.jpg" alt="" width="100%" >
+            </span>
+            <span style="float:right;width: 58%;">
+                <p style="float:left; display:block;" >
+                <heading style="color:blue;"><strong>Towards Scalable Neural Representation for Diverse Videos </strong> </heading><br>
+            <strong>CVPR 2023
+                <a href="https://boheumd.github.io/D-NeRV">[project page]</a>
+                <a href="https://arxiv.org/abs/2303.14124">[paper] 
+                <a href="https://github.com/boheumd/D-NeRV">[code]</a>
+            </strong> <br>
+                Bo He, Xitong Yang, Hanyu Wang, Zuxuan Wu, <strong>Hao Chen</strong>, Shuaiyi Huang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava  <br style="line-height:125%"> </br>    
+                We propose D-NeRV, a novel neural representation framework designed to encode large-scale and diverse videos. 
+                </p>
+            </span>
+        </div>        
     
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
@@ -173,7 +191,7 @@ p {
             <heading style="color:blue;"><strong>CNeRV: Content-adaptive Neural Representation for Visual Data </strong> </heading><br>
             <strong>BMVC 2022 (Oral)
                 <a href="https://haochen-rye.github.io/CNeRV">[project page]
-                <a href="http://128.84.21.203/abs/2211.10421">[pdf] 
+                <a href="http://128.84.21.203/abs/2211.10421">[paper] 
                 </a> </strong> <br>
             <strong>Hao Chen</strong>, Matt Gwilliam, Bo He, Ser-Nam Lim, Abhinav Shrivastava       <br style="line-height:125%"> </br>     
             We propose a hybrid video neural representation with content-adaptive embedding to introduce internal generalization.   
@@ -191,7 +209,7 @@ p {
             <heading style="color:blue;"><strong>NeRV: Neural Representations for Videos </strong> </heading><br>
             <strong>NeurIPS 2021 
                 <a href="https://haochen-rye.github.io/NeRV">[project page]
-                <a href="https://arxiv.org/abs/2110.13903">[pdf]
+                <a href="https://arxiv.org/abs/2110.13903">[paper]
                 </a><a href="https://github.com/haochen-rye/NeRV.git">[code]</a></strong> <br>          
             <strong>Hao Chen</strong>, Bo He, Hanyu Wang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava     <br style="line-height:125%"> </br>    
             We propose an image-wise neural representation for videos, which achieves good compression results and fast decoding speed.
