--- a/object_detection.html
+++ b/object_detection.html
@@ -112,7 +112,7 @@ p {
 
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
-                <img src="images/lth-det.png" alt="" width="100%" >
+                <img src="images/hr-rcnn.png" alt="" width="100%" >
             </span>
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
@@ -125,7 +125,7 @@ p {
 
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
-                <img src="images/lth-det.png" alt="" width="100%" >
+                <img src="images/sstd.png" alt="" width="100%" >
             </span>
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
@@ -139,7 +139,7 @@ p {
 
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px; margin-bottom: 50px;"> 
             <span style="float:left;width: 40%;">
-                <img src="images/ge_teaser.jpg" alt="" width="100%" >
+                <img src="images/lstd.png" alt="" width="100%" >
             </span>
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
