fix  HNeRV page

--- a/HNeRV/index.html
+++ b/HNeRV/index.html
@@ -53,9 +53,7 @@ p {
             <h2 class="col-md-12 text-center">
                 HNeRV: A Hybrid Neural Representation for Videos</br> 
                 <small>
-                    <a href="https://cvpr2023.thecvf.com"> CVPR 2023 </a>  &nbsp &nbsp &nbsp &nbsp &nbsp
-                    <a href="https://arxiv.org/abs/2304.02633"> Paper</a> &nbsp &nbsp &nbsp &nbsp &nbsp
-                    <a href="https://github.com/haochen-rye/HNeRV"> Code</a>
+                    <a href="https://cvpr2023.thecvf.com"> CVPR 2023 </a>  
                 </small>                    
             </h2>
         </div>
@@ -75,10 +73,17 @@ p {
                     </li>
                 </ul>
                 <sup>1</sup> University of Maryland, College Park  &nbsp &nbsp &nbsp
-                <sup>2</sup> Meta AI 
+                <sup>2</sup> Meta AI </br> 
             </div>
-        
-        </div>
+            <div class="row">
+                <h2 class="col-md-12 text-center">
+                    <small>
+                    <a href="https://arxiv.org/abs/2304.02633"> Paper</a> &nbsp &nbsp &nbsp &nbsp &nbsp
+                    <a href="https://github.com/haochen-rye/HNeRV"> Code</a>         
+                    </small>                    
+                </h2>
+            </div>
+    </div>
 
 
 
