--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ p {
                 <font size="+3"> Hao Chen  <img style="height:60px;" align="top" src="./images/L.jpeg"> </font> </br>                 
                 <small>
                     陈 豪 <br> 
-                    chenh@umd.edu 
+                    haochen.umd@gmail.com
                 </small>
 
             </h2>
@@ -112,39 +112,6 @@ p {
             </p>
 
         </h2>
-
-
-        <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
-            <span style="float:left;width: 40%;">
-                <img align="right" src="images/hypernerv_teaser_logx.png" alt="" width="90%" >
-            </span>
-            <span style="float:right;width: 58%;">
-                <p style="float:left; display:block;" >
-            <heading style="color:blue;"><strong>HyperNeRV: Towards Fast Learning of Video Neural Representations </strong> </heading><br>
-            <strong>Under Review</a></strong> <br>
-            <strong>Hao Chen</strong>, Abhinav Shrivastava          <br style="line-height:125%"> </br>    
-            We propose a hypernetwork to enable fast learning (~10<sup>4</sup>x faster) of video neural representation, 
-            and generate video model weights directly without training.   
-            </p>
-            </span>
-        </div>
-
-
-
-        <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
-            <span style="float:left;width: 40%;">
-                <img src="images/nvloader_speed.png" alt="" width="100%" >
-            </span>
-            <span style="float:right;width: 58%;">
-                <p style="float:left; display:block;" >
-                <heading style="color:blue;"><strong>NVLoader: A Neural Video Dataloader for Efficient Data Loading </strong> </heading><br>
-            <strong>Under Review</a></strong> <br>
-                <strong>Hao Chen</strong>, Saining Xie, Ser-Nam Lim, Abhinav Shrivastava          <br style="line-height:125%"> </br>    
-            We propose a neural video dataloader, which is fast (3-8x faster), efficient, and can be deployed easily.   
-            <!-- Without adding dataset storage or hurting action recognition accuracy, NVLoader can be 3-8x faster. -->
-                </p>
-            </span>
-        </div>
         
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
