--- a/efficient_archi.html
+++ b/efficient_archi.html
@@ -54,7 +54,7 @@ p {
                 <font size="+3"> Hao Chen  <img style="height:60px;" align="top" src="./images/L.jpeg"> </font> </br>                 
                 <small>
                     陈 豪 <br> 
-                    Email: chenh@umd.edu <br>
+                    haochen.umd@gmail.com
                 </small>
 
             </h2>
@@ -66,28 +66,10 @@ p {
                 <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin </a>
                 <br>
             </ul>
-                <a href="http://www.cs.umd.edu/"></font>Department of Computer Science, University of Maryland </a><br>            
             </h4>
         </div>
 
 
-
-
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <p class="text-justify">
-                    <br>
-                    I am currently a 4th &nbsp;Ph.D. student in the department of Computer Science at University of Maryland, College Park, 
-                    advised by <a href="http://www.cs.umd.edu/~abhinav/">Prof. Abhinav Shrivastava</a>&nbsp;. 
-                    I received my Master's degree in Pattern Recognition &amp; Intellegent Systems from 
-                    <a href="http://english.hust.edu.cn">Huazhong University fo Science &amp; Technology (HUST)</a> with the supervison of&nbsp;<a href="https://www.researchgate.net/profile/Guoyou_Wang">Prof. Guoyou Wang</a>.
-                    Before that, I got my bachelor's degree from the school of <a href=http://english.oei.hust.edu.cn/>Optical and Electronic Information</a> at HUST as well. <br> <br>
-                        
-                        
-                    My research interest lies in deep learning and computer vision, particularly for neural visual representation, efficient architecture design, and object detection.
-                </p>
-            </div>
-        </div>
 
 
         <h2>    
