--- a/object_detection.html
+++ b/object_detection.html
@@ -60,7 +60,7 @@ p {
             </h2>
             <h4 class="col-md-12 text-center">
             <ul class="list-inline">
-                <a href="https://drive.google.com/file/d/1IwJOJ_tMe3lWbO8643ZLwafpzmWA4dAj/view?usp=sharing">CV &nbsp; / &nbsp;</a>
+                <a href="images/hao_cv.pdf">CV &nbsp; / &nbsp;</a>
                 <a href="https://scholar.google.com/citations?hl=en&user=1aX65skAAAAJ">Google Scholar &nbsp; / &nbsp; </a>
                 <a href="https://github.com/haochen-rye">Github &nbsp; / &nbsp;</a>
                 <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin </a>
