--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ p {
                     , supervised by <a href="https://www.researchgate.net/profile/Guoyou_Wang">Prof. Guoyou Wang</a>. 
                     I also hold a Bachelor's degree from the School of <a href=http://english.oei.hust.edu.cn/>Optical and Electronic Information</a> at HUST.
                     <br> <br>
-                    My research primarily focuses on implicit video representation, compression techniques, 
-                    discriminative self-learning, generative pre-training, efficient deployment of deep neural networks.
+                    My research primarily focuses on implicit video representation, compression techniques, efficient computation,
+                    discriminative self-learning, generative pre-training.
                     
                 </p>
             </div>
