--- a/index.html
+++ b/index.html
@@ -87,8 +87,13 @@ p {
                     , supervised by <a href="https://www.researchgate.net/profile/Guoyou_Wang">Prof. Guoyou Wang</a>. 
                     I also hold a Bachelor's degree from the School of <a href=http://english.oei.hust.edu.cn/>Optical and Electronic Information</a> at HUST.
                     <br> <br>
-                    My research primarily focuses on implicit video representation, compression techniques, efficient computation,
-                    discriminative self-learning, generative pre-training.
+                    My research primarily focuses on implicit video representation, compression techniques, efficient deployment of neural networks.
+                    <br> <br>                    
+                    I proposed an image-wise implicit neural representation for videos and have been building an implicit framework based on it. 
+                    I envision this implicit space functioning similarly to the Fourier Transform in signal processing, 
+                    offering new perspectives and facilitating various tasks in video processing. 
+                    These tasks include compression, enhancement, processing, analysis, and generation of videos. 
+                    Additionally, this framework can be applied to many other types of sequential data, such as aerial and medical imagery videos, dynamic point clouds.
                     
                 </p>
             </div>
@@ -113,7 +118,27 @@ p {
             </p>
 
         </h2>
-        
+
+        <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
+            <span style="float:left;width: 40%;">
+                <img src="images/fastnerv-teaser.jpg" alt="" width="100%" >
+            </span>
+            <span style="float:right;width: 58%;">
+                <p style="float:left; display:block;" >
+                <heading style="color:blue;"><strong>Fast Encoding and Decoding for Implicit Video Representation </strong> </heading><br>
+            <!-- <strong>CVPR 2023
+                <a href="https://haochen-rye.github.io/HNeRV">[project page]</a>
+                <a href="https://arxiv.org/abs/2304.02633">[paper] 
+                <a href="https://github.com/haochen-rye/HNeRV.git">[code]</a>
+            </strong> <br> -->
+                <strong>Hao Chen</strong>, Saining Xie, Ser-Nam Lim, Abhinav Shrivastava         <br style="line-height:125%"> </br>    
+                We propose NeRV-Enc, which encodes videos 10<sup>4</sup>  times faster than its predecessor NeRV, utilizing hyper-networks. 
+                Additionally, we introduce NeRV-Dec, which decodes video 8.9 times faster than NeRV via parallel decoding,
+                 and is 11 times faster compared to the H.264 codec.
+            </p>
+            </span>
+        </div>
+
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
                 <img src="images/hnerv-teaser.png" alt="" width="100%" >
