--- a/index.html
+++ b/index.html
@@ -121,16 +121,16 @@ p {
 
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
-                <img src="images/fastnerv-teaser.jpg" alt="" width="100%" >
+                <img src="images/fastnerv.jpg" alt="" width="100%" >
             </span>
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
                 <heading style="color:blue;"><strong>Fast Encoding and Decoding for Implicit Video Representation </strong> </heading><br>
             <!-- <strong>CVPR 2023
-                <a href="https://haochen-rye.github.io/HNeRV">[project page]</a>
-                <a href="https://arxiv.org/abs/2304.02633">[paper] 
-                <a href="https://github.com/haochen-rye/HNeRV.git">[code]</a>
-            </strong> <br> -->
+                <!-- <a href="https://haochen-rye.github.io/HNeRV">[project page]</a> -->
+                <a href="images/FastNeRV.pdf">[preprint paper]  </a>
+                <!-- <a href="https://github.com/haochen-rye/HNeRV.git">[code]</a> -->
+            </strong> <br> 
                 <strong>Hao Chen</strong>, Saining Xie, Ser-Nam Lim, Abhinav Shrivastava         <br style="line-height:125%"> </br>    
                 We propose NeRV-Enc, which encodes videos 10<sup>4</sup>  times faster than its predecessor NeRV, utilizing hyper-networks. 
                 Additionally, we introduce NeRV-Dec, which decodes video 8.9 times faster than NeRV via parallel decoding,
