--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ p {
             <h4 class="col-md-12 text-center">
             <ul class="list-inline">
                 <a href="images/hao_cv.pdf">CV &nbsp; / &nbsp;</a>
-                <a href="https://scholar.google.com/citations?hl=en&user=1aX65skAAAAJ">Google Scholar &nbsp; / &nbsp; </a>
+                <a href="https://scholar.google.com/citations?user=QMuIRLYAAAAJ&hl=en">Google Scholar &nbsp; / &nbsp; </a>
                 <a href="https://github.com/haochen-rye">Github &nbsp; / &nbsp;</a>
                 <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin </a>
                 <br>
