--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ p {
                     <strong>
                     </strong> 
                     <!-- </span> <br> -->
-                    I am currently a Postdoctoral Researcher at Meta. 
+                    I am currently a Research Scientist at ByteDance. Before this, I worked as a Postdoctoral Researcher at Meta.                    
                     I earned my Ph.D. in Computer Science from the University of Maryland, College Park, under the guidance of <a href="http://www.cs.umd.edu/~abhinav/">Prof. Abhinav Shrivastava</a>.
                     Prior to this, I completed my Master's degree in Pattern Recognition & Intelligent Systems at <a href="http://english.hust.edu.cn">Huazhong University of Science & Technology</a> (HUST)
                     , supervised by <a href="https://www.researchgate.net/profile/Guoyou_Wang">Prof. Guoyou Wang</a>. 
@@ -126,10 +126,10 @@ p {
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
                 <heading style="color:blue;"><strong>Fast Encoding and Decoding for Implicit Video Representation </strong> </heading><br>
-            <!-- <strong>CVPR 2023
-                <!-- <a href="https://haochen-rye.github.io/HNeRV">[project page]</a> -->
+            <strong>ECCV 2024
+                <a href="https://haochen-rye.github.io/FastNeRV">[project page]</a>
                 <a href="images/FastNeRV.pdf">[preprint paper]  </a>
-                <!-- <a href="https://github.com/haochen-rye/HNeRV.git">[code]</a> -->
+                <a href="https://github.com/haochen-rye/FastNeRV">[code]</a>
             </strong> <br> 
                 <strong>Hao Chen</strong>, Saining Xie, Ser-Nam Lim, Abhinav Shrivastava         <br style="line-height:125%"> </br>    
                 We propose NeRV-Enc, which encodes videos 10<sup>4</sup>  times faster than its predecessor NeRV, utilizing hyper-networks. 
