update fastnerv paper link

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ p {
                 <heading style="color:blue;"><strong>Fast Encoding and Decoding for Implicit Video Representation </strong> </heading><br>
             <strong>ECCV 2024
                 <a href="https://haochen-rye.github.io/FastNeRV">[project page]</a>
-                <a href="images/FastNeRV.pdf">[preprint paper]  </a>
+                <a href="https://arxiv.org/abs/2409.19429">[preprint paper]  </a>
                 <a href="https://github.com/haochen-rye/FastNeRV">[code]</a>
             </strong> <br> 
                 <strong>Hao Chen</strong>, Saining Xie, Ser-Nam Lim, Abhinav Shrivastava         <br style="line-height:125%"> </br>    
