update project page

--- a/FastNeRV/index.html
+++ b/FastNeRV/index.html
@@ -69,23 +69,20 @@ p {
                     Ser-Nam Lim<sup>3</sup>,  &nbsp &nbsp
                     <li>
                         <a href="http://www.cs.umd.edu/~abhinav/">
-                          Abhinav Shrivastava<sup>4</sup>
+                          Abhinav Shrivastava<sup>1</sup>
                         </a>
                     </li>
                 </ul>
                 <p>
-                    <sup>1</sup> ByteDance  &nbsp &nbsp &nbsp
+                    <sup>1</sup> University of Maryland, College Park  &nbsp &nbsp &nbsp
                     <sup>2</sup> New York University,  &nbsp &nbsp &nbsp    
-                </p>
-                <p>
                     <sup>3</sup> University of Central Florida  &nbsp &nbsp &nbsp
-                    <sup>4</sup> University of Maryland, College Park  &nbsp &nbsp &nbsp
                 </p>
             </div>
             <div class="row">
                 <h2 class="col-md-12 text-center">
                     <small>
-                    <a href=""> Paper</a> &nbsp &nbsp &nbsp &nbsp &nbsp
+                    <a href="https://arxiv.org/abs/2409.19429"> Paper</a> &nbsp &nbsp &nbsp &nbsp &nbsp
                     <a href="https://github.com/haochen-rye/FastNeRV"> Code</a>         
                     </small>                    
                 </h2>
