--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ p {
                 <a href="images/hao_cv.pdf">CV &nbsp; / &nbsp;</a>
                 <a href="https://scholar.google.com/citations?user=QMuIRLYAAAAJ&hl=en">Google Scholar &nbsp; / &nbsp; </a>
                 <a href="https://github.com/haochen-rye">Github &nbsp; / &nbsp;</a>
-                <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin </a>
+                <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin &nbsp; / &nbsp;</a>
+                <a href="images/LMM_intern.pdf">Hiring &nbsp; &nbsp;</a>
                 <br>
             </ul>
                 <!-- <a href="http://www.cs.umd.edu/"></font>Department of Computer Science, University of Maryland </a><br>             -->
@@ -71,30 +72,24 @@ p {
         </div>
 
 
-
-
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <p class="text-justify">
-                    <br>
-                    <!-- <span style="color:red;"> -->
-                    <strong>
-                    </strong> 
-                    <!-- </span> <br> -->
+                    <span style=" font-weight:bold;">
+                        ⭐ 🚀 🔥 We are excited to welcome passionate Research Interns to join our team, working on cutting-edge multi-modality models and vision representation! If you’re interested in innovative research and eager to make an impact, please feel free to reach out via email. 🔥 🚀 ⭐                    </span>
+                    <br><br>
                     I am currently a Research Scientist at ByteDance. Before this, I worked as a Postdoctoral Researcher at Meta.                    
                     I earned my Ph.D. in Computer Science from the University of Maryland, College Park, under the guidance of <a href="http://www.cs.umd.edu/~abhinav/">Prof. Abhinav Shrivastava</a>.
                     Prior to this, I completed my Master's degree in Pattern Recognition & Intelligent Systems at <a href="http://english.hust.edu.cn">Huazhong University of Science & Technology</a> (HUST)
                     , supervised by <a href="https://www.researchgate.net/profile/Guoyou_Wang">Prof. Guoyou Wang</a>. 
                     I also hold a Bachelor's degree from the School of <a href=http://english.oei.hust.edu.cn/>Optical and Electronic Information</a> at HUST.
                     <br> <br>
-                    My research primarily focuses on implicit video representation, compression techniques, efficient deployment of neural networks.
-                    <br> <br>                    
-                    I proposed an image-wise implicit neural representation for videos and have been building an implicit framework based on it. 
+                    My research primarily focuses on implicit video representation, compression techniques, efficient deployment of neural networks.             
+                    During the PhD, I proposed an image-wise implicit neural representation for videos and have been building an implicit framework based on it. 
                     I envision this implicit space functioning similarly to the Fourier Transform in signal processing, 
                     offering new perspectives and facilitating various tasks in video processing. 
                     These tasks include compression, enhancement, processing, analysis, and generation of videos. 
                     Additionally, this framework can be applied to many other types of sequential data, such as aerial and medical imagery videos, dynamic point clouds.
-                    
                 </p>
             </div>
         </div>
