--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ p {
                 <a href="https://scholar.google.com/citations?user=QMuIRLYAAAAJ&hl=en">Google Scholar &nbsp; / &nbsp; </a>
                 <a href="https://github.com/haochen-rye">Github &nbsp; / &nbsp;</a>
                 <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin &nbsp; / &nbsp;</a>
-                <a href="images/LMM_intern.pdf">
+                <a href="images/lmm_intern.pdf">
                     <span style="color:red;">Hiring</span>&nbsp;&nbsp;
                 </a>                                
                 <br>
