--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@ p {
                 <a href="images/hao_cv.pdf">CV &nbsp; / &nbsp;</a>
                 <a href="https://scholar.google.com/citations?user=QMuIRLYAAAAJ&hl=en">Google Scholar &nbsp; / &nbsp; </a>
                 <a href="https://github.com/haochen-rye">Github &nbsp; / &nbsp;</a>
-                <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin &nbsp; / &nbsp;</a>
-                <a href="images/lmm_intern.pdf">
-                    <span style="color:red;">Hiring</span>&nbsp;&nbsp;
-                </a>                                
+                <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin &nbsp; / &nbsp;</a>          
                 <br>
             </ul>
                 <!-- <a href="http://www.cs.umd.edu/"></font>Department of Computer Science, University of Maryland </a><br>             -->
@@ -78,8 +75,7 @@ p {
             <div class="col-md-8 col-md-offset-2">
                 <p class="text-justify">
                     <span style=" font-weight:bold;">
-                        ⭐ 🚀 🔥 We are excited to welcome passionate Research Interns to join our team, working on cutting-edge multi-modality models and vision representation! If you’re interested in innovative research and eager to make an impact, please feel free to reach out via email. 🔥 🚀 ⭐                    </span>
-                    <br><br>
+                        ⭐🚀🔥 We’re excited to welcome Research Interns to join us in developing cutting-edge multi-modal models and vision representation. If you’re passionate about innovative research and want to make an impact, reach out via email! 🔥🚀⭐                    <br><br>
                     I am currently a Research Scientist at ByteDance. Before this, I worked as a Postdoctoral Researcher at Meta.                    
                     I earned my Ph.D. in Computer Science from the University of Maryland, College Park, under the guidance of <a href="http://www.cs.umd.edu/~abhinav/">Prof. Abhinav Shrivastava</a>.
                     Prior to this, I completed my Master's degree in Pattern Recognition & Intelligent Systems at <a href="http://english.hust.edu.cn">Huazhong University of Science & Technology</a> (HUST)
